# rpi-sentinel

./: .gitignore  CLAUDE.md  CMakeLists.txt  config.example.json  config.json  rpi-sentinel.service
.github/workflows/: ci.yml  deploy-dashboard.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake
companion/: README.md  usage-publisher.service  usage_publisher.py
dashboard/: index.html  styles.css
dashboard/js/: charts.js  combined.js  config-panel.js  handlers.js  history.js  layout.js  main.js  state.js  utils.js
dashboard/tests/: dashboard.test.mjs
dashboards/: rpi-sentinel.json
docs/: README.md  architecture.md  build-guide.md  cloudflare-setup.md  grafana-opentelemetry-plan.md  observability.md  persistence.md  workflow.md
docs/plans/: grafana-opentelemetry-plan.md
grafana/dashboards/: rpi-sentinel.json
grafana/provisioning/alerts/: loki-rules.yaml  mimir-rules.yaml
packaging/systemd/: rpi-sentinel.service.in
provisioning/alerts/: rpi-sentinel-alerts.json
src/: CMakeLists.txt  main.cpp
src/alerts/: CMakeLists.txt  CloudStorageHandler.cpp  CloudStorageHandler.hpp  GpioAlert.cpp  GpioAlert.hpp  IAlertHandler.hpp  LogAlert.cpp  LogAlert.hpp  MqttPublisher.cpp  MqttPublisher.hpp
src/events/: CMakeLists.txt  EventBus.cpp  EventBus.hpp  SensorEvent.hpp  ThermalEvent.hpp
src/monitoring/: CMakeLists.txt  Config.hpp  ConfigLoader.cpp  ConfigLoader.hpp  MonitoringHub.cpp  MonitoringHub.hpp  ThresholdMonitor.cpp  ThresholdMonitor.hpp
src/otel/: CMakeLists.txt  OtlpExporter.cpp  OtlpExporter.hpp
src/persistence/: CMakeLists.txt  HistoryStore.cpp  HistoryStore.hpp  SqliteHistoryHandler.cpp  SqliteHistoryHandler.hpp
src/sensors/: CMakeLists.txt  CpuTempReader.cpp  CpuTempReader.hpp  DHT11Reader.cpp  DHT11Reader.hpp  DS18B20Reader.cpp  DS18B20Reader.hpp  ISensorReader.hpp  SGP30Reader.cpp  SGP30Reader.hpp  SimulatedSensor.cpp  SimulatedSensor.hpp
src/web/: CMakeLists.txt  HttpServer.cpp  HttpServer.hpp  WebAlert.cpp  WebAlert.hpp  WebState.cpp  WebState.hpp
tests/: CMakeLists.txt  test_cloud_storage_handler.cpp  test_config_loader.cpp  test_cpu_temp_reader.cpp  test_event_bus.cpp  test_gpio_alert.cpp  test_history_store.cpp  test_mqtt_history_responder.cpp  test_otlp_exporter.cpp  test_sgp30_reader.cpp  test_threshold_monitor.cpp  test_web_state_hydration.cpp
worker/: package.json  schema.sql  wrangler.toml
worker/src/: index.ts
